<resources>
    <string name="app_name">Restaurant</string>
    <string name="boisson_ajouter">Ajouter une boisson</string>
    <string name="boisson_nom_hint">Entrez le nom de la boisson</string>
    <string name="boisson_type_hint">Entrez le type de la boisson</string>
    <string name="boisson_pays_hint">Entrez le pays d\'orgine de la boisson</string>
    <string name="boisson_producteur_hint">Entrez le producteur de la boisson</string>
    <string name="boisson_image_hint">Entrez l\'image de la boisson</string>
    <string name="boisson_nom_label">Nom</string>
    <string name="boisson_type_label">Type</string>
    <string name="boisson_pays_label">Pays Origine</string>
    <string name="boisson_producteur_label">Producteur</string>
    <string name="boisson_image_label">Image</string>
    <string name="boisson_ajouter_image">Ajouter une image</string>
    <string name="filtrer">filtrer</string>
    <string name="supprimer">supprimer</string>
    <string name="prendre_une_photo">prendre une photo</string>
    <string name="visuel_boisson">visuel boisson</string>
    <string name="partager">Partager</string>
    <string name="boisson_partager">Boisson %1$s</string>
    <string name="boisson_partager_sujet">Message pour la boisson %1$s</string>
    <string name="boisson_partager_message">Wow La boisson.</string>
</resources>