<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:id="@+id/textView4"
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boisson_nom_label" />

    <EditText
        android:id="@+id/boisson_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boisson_nom_hint"
        android:inputType="text" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boisson_type_label" />

    <Spinner
        android:id="@+id/type_boisson"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingBottom="12dp" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boisson_pays_label" />

    <EditText
        android:id="@+id/boisson_pays"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boisson_pays_hint"
        android:inputType="text" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boisson_producteur_label" />

    <EditText
        android:id="@+id/boisson_producteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boisson_producteur_hint"
        android:inputType="text" />

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/boisson_image_label" />

    <EditText
        android:id="@+id/boisson_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/boisson_image_hint"
        android:inputType="text" />
    <ImageView
        android:id="@+id/boisson_photo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:background="@color/black"
        android:cropToPadding="true"
        android:scaleType="centerInside"
        android:layout_gravity="center_horizontal" />

    <ImageButton
        android:id="@+id/boisson_Camera"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/baseline_photo_camera_24" />
</LinearLayout>
